--- a/Ionic_App/www/index.html
+++ b/Ionic_App/www/index.html
@@ -16,6 +16,7 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
+    <script src="lib/ngCordova/ng-cordova.js"></script>
     <script src="cordova.js"></script>
 
 
@@ -25,6 +26,7 @@
     <script src="js/services.js"></script>
     <script src="js/constants.js"></script>
     <script src="lib/angular-mocks/angular-mocks.js"></script>
+    <script src="lib/fingerprintjs2/fingerprint2.min.js"></script>
   </head>
   <body ng-app="starter" ng-controller="AppCtrl">
 
