added token decoding

--- a/Ionic_App/www/index.html
+++ b/Ionic_App/www/index.html
@@ -27,6 +27,7 @@
     <script src="js/constants.js"></script>
     <script src="lib/angular-mocks/angular-mocks.js"></script>
     <script src="lib/fingerprintjs2/fingerprint2.min.js"></script>
+    <script src="lib/jwt-decode/jwt-decode.min.js"></script>
   </head>
   <body ng-app="starter" ng-controller="AppCtrl">
 
